--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "pagespeed",
+      "name": "form",
       "title": "Run a Pagespeed Test",
       "description": "Run a pagespeed test on a given URL",
+      "mode": "view"
+    },
+    {
+      "name": "pagespeed",
+      "title": "View and Manage Pagespeed Reports",
+      "description": "Check and manage your previous pagespeed reports",
       "mode": "view"
     }
   ],
